--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "mobx": "^6.12.3",
+    "mobx-react-lite": "^4.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sass": "^1.74.1"
