--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.29.0",
+    "axios": "^1.6.8",
     "mobx": "^6.12.3",
     "mobx-react-lite": "^4.0.7",
     "react": "^18.2.0",
